#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.64])
AC_INIT([conan], [0.99], [rata@cbuc.cl])
AM_INIT_AUTOMAKE([1.9 foreign])
AC_PREFIX_DEFAULT([/usr])
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_CHECK_FUNCS([pow sqrt])

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([conan
                   contrib/aracne
                   contrib/tinyxml])

AC_ARG_ENABLE([python],
              AS_HELP_STRING([--disable-python],[do not build the Python bindings]),
              [case "${enableval}" in
                yes) python=true ;;
                no)  python=false ;;
                *) AC_MSG_ERROR([bad value ${enableval} for --enable-python]) ;;
               esac],
              [python=true])
if test x$python = xtrue; then
  AC_CONFIG_SUBDIRS([python])
fi
AM_CONDITIONAL([PYTHON], [test x$python = xtrue])

AC_OUTPUT
