#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.64])
AC_INIT([conan], [0.99], [rata@cbuc.cl])
AM_INIT_AUTOMAKE([1.9 foreign])
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stddef.h stdlib.h string.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([atexit memmove pow sqrt strchr strerror])

AC_CONFIG_FILES([Makefile
                 dynamics/Makefile
                 graph_models/Makefile
                 inference/Makefile
                 io/Makefile
                 properties/Makefile
                 subgraph/Makefile
                 utils/Makefile])
AC_OUTPUT
