## Makefile.am -- Process this file with automake to produce Makefile.in
conan_propertiesdir = ${pkgincludedir}/properties
conan_properties_HEADERS = centrality.hpp clustering.hpp color.hpp \
    connectance.hpp distributions.hpp entropy.hpp \
    fractal_dim.hpp random_props.hpp shortest_paths.hpp
