## Makefile.am -- Process this file with automake to produce Makefile.in
conan_subgraphdir = ${pkgincludedir}/subgraph
conan_subgraph_HEADERS = edge_set.hpp edge_set_extractors.hpp \
    guimera_and_amaral.hpp newman_communities.hpp \
    induced_subgraph.hpp induced_subgraph_extractors.hpp \
    modularity.hpp roles.hpp rosvall_and_bergstrom.hpp
